Correccion del WIDTH en los componentes & se agregan animaciones a elementos

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" /> 
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> 
-        <title>React App</title>
+        <title>ENARM</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"> 
     </head>
     <body>
