Adding Conekta to Mian

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       type="text/javascript"
       src="https://cdn.conekta.io/js/v1.0.1/conekta.js"
     ></script>
+    <script
+      type="text/javascript"
+      src="https://pay.conekta.com/v1.0/js/conekta-checkout.min.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
