Adding payment process to our new system

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,16 @@
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     ></script>
-    <script
+    <!-- <script
       type="text/javascript"
       src="https://cdn.conekta.io/js/v1.0.1/conekta.js"
     ></script>
     <script
       type="text/javascript"
       src="https://pay.conekta.com/v1.0/js/conekta-checkout.min.js"
-    ></script>
+    ></script> -->
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
