--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ENARM</title>
+    
+    <!-- SEO Meta Tags -->
+    <title>Plataforma ENARM - Curso Médico para el Examen ENARM </title>
+    <meta name="description" content="Plataforma de cursos y recursos médicos para médicos preparándose para el Examen Nacional para Aspirantes a Residencias Médicas (ENARM) en México. Encuentra materiales educativos, flashcards, y simulaciones de exámenes para fortalecer tus conocimientos médicos." />
+    <meta name="keywords" content="ENARM, curso ENARM, examen médico, medicina en México, preparación ENARM, cursos médicos, recursos médicos, flashcards, simulación de examen" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Plataforma ENARM" />
+    <meta property="og:title" content="Plataforma ENARM - Curso Médico para el Examen ENARM en México" />
+    <meta property="og:description" content="Prepárate para el ENARM con cursos especializados y recursos médicos diseñados para médicos en México. Accede a flashcards, simulaciones y materiales de estudio actualizados." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tu-sitio.com" />
+    <meta property="og:image" content="https://tu-sitio.com/imagen-de-og.png" />
+    <meta property="og:locale" content="es_MX" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Plataforma ENARM - Curso Médico para el Examen ENARM en México" />
+    <meta name="twitter:description" content="Prepárate para el ENARM en México con nuestros recursos educativos y simulaciones de exámenes diseñados para fortalecer tus conocimientos médicos." />
+    <meta name="twitter:image" content="https://tu-sitio.com/imagen-twitter.png" />
+
+    <!-- Fonts and Scripts -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
@@ -15,16 +33,7 @@
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     ></script>
-    <!-- <script
-      type="text/javascript"
-      src="https://cdn.conekta.io/js/v1.0.1/conekta.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://pay.conekta.com/v1.0/js/conekta-checkout.min.js"
-    ></script> -->
     <script src="https://sdk.mercadopago.com/js/v2"></script>
-
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
